--- a/style/style.css
+++ b/style/style.css
@@ -1,27 +1,6 @@
-.navbar-nav {
-    width: 24rem;
-    justify-content: space-between;
+main {
+    background-color: #f9f9f9;
 }
-
-.nav-link {
-   --bs-nav-link-font-size: 17px;
+img {
+    max-height: 100%;
 }
-.btn {
-    border-radius: 5.952px;
-    --bs-btn-padding-x: 2rem;
-    --bs-btn-padding-y: 0.87rem;
-}
-.btn-success {
-        --bs-btn-bg: #75BF7A;
-        border-color: transparent;
-    }
-.navbar {
-     padding-left: 50px;
-     padding-top: 4rem;
-      padding-bottom: 2.4rem;
-}
-/* @media (min-width: 576px) {
-    .navbar-expand-lg .navbar-nav {
-    flex-direction: row;
-   }
-} */
