--- a/style/btsreboot.css
+++ b/style/btsreboot.css
@@ -20,6 +20,10 @@
      padding-top: 4rem;
       padding-bottom: 2.4rem;
 }
+form {
+    background: #75BF7A;
+    border-radius: 6px;
+}
 /* @media (min-width: 576px) {
     .navbar-expand-lg .navbar-nav {
     flex-direction: row;
